# Programming

./: Getting_Started.ipynb  README.md  test.db
AWS/: linear_learner_mnist.ipynb
Cheatsheets and more/: PythonCheatSheet.ipynb
ER/: index.html
Formula1_ML/: f1_predictor.ipynb
Google Developer/: binary_classification_rice.ipynb  binary_classification_rice.py  linear_regression_taxi.ipynb
Google_Developers/: linear_regression_taxi.ipynb
IBM/: Part1.ipynb  Part2.ipynb
MITx/Numpy/: lec_numpy.ipynb
Random/: GitHub_Stars_Organized.md  LoRaWAN_MVP_Proposal.md  LoRaWAN_Master_Plan.md  LoRaWAN_Project_Proposal.md  PROJECT_NEXUS_MEGA_STRATEGY.md  RAG_CHATBOT_BUILD_SUMMARY.md  RAG_CHATBOT_QUICKSTART.md  RAG_CHATBOT_SETUP.md  Skyserver_CrossID1_13_2026 4_47_50 PM.xlsx - Skyserver_CrossID1_13_2026 4_47.csv  Task 1.md  UCL_IMPLEMENTATION_PLAN.md  bookmarks_1_18_26.html  bookmarks_organized.html  emi_calculator.py  fv_pv_calculator.py  mutations.json  palindrome.py  rag-chatbot-workflow.json  starred_clean.json  starred_full.json  starred_ids.txt  starred_repos.csv  starred_repos.tsv  starred_with_ids.json  task_solution.ipynb  test_palindrome.py
Random/.claude/: settings.local.json
Random/.github/: copilot-instructions.md
Random/.vibe/: progress.md  task_plan.md  (+1 more)
SunHacks/: main.py
backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
mcp-server1/: main.py  pyproject.toml
physics-solver-mcp/: .gitignore  README.md  SETUP_COMPLETE.md  claude_config_instructions.txt  client.py  main.py  physics_server.py  pyproject.toml  test_server.py
(+47 files in other folders)
